feat: Change error syntax from workflow.yaml

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,7 +16,7 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        uses: npm install
+        run: npm install
 
       - name: Run test
-        uses: npm test
+        run: npm test
